# Makefile.am for eo/src

SUBDIRS 		= es ga gp do utils other

lib_LIBRARIES 		= libeo.a

libeo_a_SOURCES 	= eoFunctorStore.cpp \
			eoPersistent.cpp \
			eoPrintable.cpp \
			eoCtrlCContinue.cpp \
			eoParetoFitness.cpp \
			eoScalarFitnessAssembled.cpp  


AM_CXXFLAGS		= -I$(top_srcdir)/src

pkginclude_HEADERS 	= eo \
			EO.h \
			apply.h \
			eoAlgo.h \
			eoBreed.h \
			eoCellularEasyEA.h \
			eoCloneOps.h \
			eoCombinedContinue.h \
			eoCombinedInit.h \
			eoContinue.h \
			eoCounter.h \
			eoCtrlCContinue.h \
			eoDetSelect.h \
			eoDetTournamentSelect.h \
			eoDistribUpdater.h \
			eoDistribution.h \
			eoDominanceMap.h \
			eoEDA.h \
			eoEasyEA.h \
			eoEvalContinue.h \
			eoEvalFunc.h \
			eoEvalFuncCounter.h \
			eoEvalFuncPtr.h \
			eoFactory.h \
			eoFitContinue.h \
			eoFitnessScalingSelect.h \
			eoFlOrBinOp.h \
			eoFlOrMonOp.h \
			eoFlOrQuadOp.h \
			eoFunctor.h \
			eoFunctorStore.h \
			eoG3Replacement.h \
			eoGenContinue.h \
			eoGenOp.h \
			eoGeneralBreeder.h \
			eoInit.h \
			eoInvalidateOps.h \
			eoLinearFitScaling.h \
			eoMGGReplacement.h \
			eoMerge.h \
			eoMergeReduce.h \
			eoNDSorting.h \
			eoObject.h \
			eoOneToOneBreeder.h \
			eoOp.h \
			eoOpContainer.h \
			eoOpSelMason.h \
			eoParetoConstraintFitness.h \
			eoParetoFitness.h \
			eoParetoRanking.h \
			eoPerf2Worth.h \
			eoPersistent.h \
			eoPop.h \
			eoPopAlgo.h \
			eoPopEvalFunc.h \
			eoPopulator.h \
			eoPrintable.h \
			eoPropGAGenOp.h \
			eoProportionalCombinedOp.h \
			eoProportionalSelect.h \
			eoRandomSelect.h \
			eoRanking.h \
			eoRankingSelect.h \
			eoReduce.h \
			eoReduceMerge.h \
			eoReduceMergeReduce.h \
			eoReduceSplit.h \
			eoReplacement.h \
			eoSGA.h \
			eoSGAGenOp.h \
			eoSGATransform.h \
			eoSTLFunctor.h \
			eoScalarFitness.h \
			eoScalarFitnessAssembled.cpp \
			eoScalarFitnessAssembled.h \
			eoSelect.h \
			eoSelectFactory.h \
			eoSelectFromWorth.h \
			eoSelectMany.h \
			eoSelectNumber.h \
			eoSelectOne.h \
			eoSelectPerc.h \
			eoSequentialSelect.h \
			eoSharing.h \
			eoSharingSelect.h \
			eoSimpleEDA.h \
			eoSteadyFitContinue.h \
			eoStochTournamentSelect.h \
			eoStochasticUniversalSelect.h \
			eoSurviveAndDie.h \
			eoTransform.h \
			eoTruncSelect.h \
			eoTruncatedSelectMany.h \
			eoTruncatedSelectOne.h \
			eoVariableLengthCrossover.h \
			eoVariableLengthMutation.h \
			eoVector.h \
			es.h \
			ga.h

