#Some dsps are missing here
EXTRA_DIST=EO.dsw random.dsp t_eoinsertion.dsp t_ops.dsp\
	atomops.dsp  t_eoaged.dsp     t_eornd.dsp        t_opsel.dsp\
	t_eobin.dsp      t_eostring.dsp     t_opselmason.dsp\
	eo.dsp       t_eobitfact.dsp  t_eovector.dsp     t_pop.dsp\
	t_eobreeder.dsp  t_es.dsp           t_popops.dsp\
	eolib.dsp    t_eoid.dsp       t_lottery.dsp\
